[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "koi-net-coordinator-node"
version = "1.0.0"
description = "Implementation of KOI-net coordinator node in Python"
authors = [
    {name = "Luke Miller", email = "luke@block.science"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "koi-net>=1.2.4",
    "colorama>=0.4.6",
    "rid_lib>=3.2.14",
    "rich>=14.0.0",
    "structlog>=24.4.0",
    "fastapi==0.121.2",
    "starlette==0.49.3",
    "uvicorn==0.38.0"
]

[project.optional-dependencies]
dev = ["twine>=6.0", "build", "pytest>=7.0", "pytest-mock>=3.10"]

[project.urls]
Homepage = "https://github.com/BlockScience/koi-net-coordinator-node/"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.pytest_cache"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
