[project]
name = "koi-net-coordinator-node"
version = "1.0.0"
description = "Implementation of KOI-net coordinator node in Python"
authors = [
    {name = "Luke Miller", email = "luke@block.science"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "koi-net~=1.3.0",
]

[project.urls]
Homepage = "https://github.com/BlockScience/koi-net-coordinator-node/"
