[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "koi-net-coordinator-node"
version = "1.0.0"
description = "Implementation of KOI-net coordinator node in Python"
authors = [
    {name = "Luke Miller", email = "luke@block.science"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "koi-net~=2.0",
]

[project.optional-dependencies]
dev = ["twine>=6.0", "build", "pytest>=7.0", "pytest-mock>=3.10"]

[project.urls]
Homepage = "https://github.com/BlockScience/koi-net-coordinator-node/"
